# media-organizer

./: Cargo.toml  README.md
src/: constants.rs  imdb.rs  main.rs  models.rs  movies.rs  subtitles.rs  tv_shows.rs  utils.rs
src/movie_processors/: directories.rs
src/processors/: directories.rs  files.rs  mod.rs
src/tv_shows_processors/: directories.rs
