[package]
name = "media-organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
inline_colorization = "0.1.6"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.22.0"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.3.1"
